2003-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Add note regarding EXIF fix.
	* magick/attribute.c (GenerateEXIFAttribute): Look for the profile
	name "EXIF" rather than "APP1".

2003-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_config_api.h.in: XWindowInfo structure in
	xwindow.h needs HasSharedMemory define.
	* magick/xwindow.c, magick/xwindow.h: Move inclusion of
	<X11/extensions/shape.h> to xwindow.c.
	* coders/dps.c, magick/xwindow.h: Move DPS includes to
	coders/dps.c
	* coders/Makefile.am: Substituted values are also set as
	make variables, so use variables rather than substitutions.
	* magick/log.c (GetLogBlob): MAGICK_HOME needs to take
	precedence over the client path for the uninstalled build.
	* magick/type.c (GetTypeBlob): MAGICK_HOME needs to take
	precedence over the client path for the uninstalled build.
	* magick/blob.c (GetConfigureBlob): MAGICK_HOME needs to take
	precedence over the client path for the uninstalled build.
	* magick/module.c (FindMagickModule): MAGICK_HOME needs to take
	precedence over the client path for the uninstalled build.

2003-07-24  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/attribute.c (TraceClippingPath): Improvements to clipping
	path parsing.

2003-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c: Disable the Windows open() extensions when
	compiling using Borland C++.
	* magick/log.c (LogMagickEvent): Unlock semaphore before
	returning.
	* ltdl/ltdl.h: Updated to latest CVS version.
	* ltdl/ltdl.c: Updated to latest CVS version.
	* Libtool: Updated to use latest CVS libtool.

2003-07-17  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick: Contributed initial Borland C++ Builder 6.0 build
	environment.

2003-07-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (GetColorInfoArray): Added a function to access
	the color definition list as an array.
	(GetColorList): Added access locks to ensure that list is not