@@ -56,6 +56,8 @@
 2003-07-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> GraphicsMagick.spec: Added RPM spec file authored by Troy
+        Edwards &lt;vallimar@sexorcisto.net&gt;.
   <LI> NEWS: Add note regarding EXIF fix.
   <LI> magick/attribute.c (GenerateEXIFAttribute): Look for the profile
         name "EXIF" rather than "APP1".
